--- a/Test/HTML skeleton/index.html
+++ b/Test/HTML skeleton/index.html
@@ -6,9 +6,19 @@
 </head>
 
 <body>
-    <h1>IsaacBlancoLoredo</h1>
-    <h2>Playing Videogames with my friends</h2>
+    <h1>Isaac Blanco Loredo</h1>
+    <h2>I like playing Videogames with my friends</h2>
     <p>I like to practice editing</p>
+    <img src="images/davinci_logo.png" height="100px" width="100px">
+    <img src="images/godzilla.png" height="100px" width="100px">
+    <img src="images/steam.jpg" height="100px" width="100px">
+    <img src="images/little_ceaz.jpg" height="100px" width="100px">
+    <hr>
+    <h2>Dream Vaction</h2>
+    <a href="https://en.wikipedia.org/wiki/Iceland">Iceland</a>
+    <a href="https://en.wikipedia.org/wiki/Japan">Japan</a>
+    <a href="https://en.wikipedia.org/wiki/Germany">Germany</a>
+    <a href="https://en.wikipedia.org/wiki/Hawaii">Hawaii</a>
 </body>
 
 </html>
