--- a/Test/HTML skeleton/index.html
+++ b/Test/HTML skeleton/index.html
@@ -6,15 +6,18 @@
 </head>
 
 <body>
-    <h1>Isaac Blanco Loredo</h1>
-    <h2>I like playing Videogames with my friends</h2>
-    <p>I like to practice editing</p>
-    <img src="images/davinci_logo.png" height="100px" width="100px">
-    <img src="images/godzilla.png" height="100px" width="100px">
-    <img src="images/steam.jpg" height="100px" width="100px">
-    <img src="images/little_ceaz.jpg" height="100px" width="100px">
+
+    <body style="background-color: #34046e;"></body>
+    <h1 style="font-family: Georgia, 'Times New Roman', Times, serif;">Isaac Blanco Loredo</h1>
+    <h2 style="color:greenyellow">I like playing Videogames with my friends</h2>
+    <p style="color:greenyellow">I like to practice editing</p> 
+
+    <img style="border:1px dotted greenyellow" src="images/davinci_logo.png" height="100px" width="100px">  
+    <img style="border:1px dotted greenyellow" src="images/godzilla.png" height="100px" width="100px">
+    <img style="border:1px dotted greenyellow" src="images/steam.jpg" height="100px" width="100px">
+    <img style="border:1px dotted greenyellow" src="images/little_ceaz.jpg" height="100px" width="100px">
     <hr>
-    <h2>Dream Vaction</h2>
+    <h2 style="color:greenyellow">Dream Vaction</h2>
     <a href="https://en.wikipedia.org/wiki/Iceland">Iceland</a>
     <a href="https://en.wikipedia.org/wiki/Japan">Japan</a>
     <a href="https://en.wikipedia.org/wiki/Germany">Germany</a>
@@ -22,4 +25,3 @@
 </body>
 
 </html>
-
